<resources>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="app_name">Geopaparazzi</string>
    <string name="app_file_name">Geopaparazzi Project Database</string>
    <string name="notesvisibilityToggle">Toggle notes visibility.</string>
    <string name="kmlsaved">Data successfully exported to: </string>
    <string name="kmlnonsaved">An error occurred during the data export!</string>
    <string name="loggingoff">Stopped all sensors.</string>
    <string name="nogps_data">No gps data available yet!</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="utctime">time: </string>
    <string name="altim">altim: </string>
    <string name="lat">lat: </string>
    <string name="lon">lon: </string>
    <string name="azimuth">azimuth: </string>
    <string name="go_to">Go to</string>
    <string name="goto_coordinate">go to coordinate</string>
    <string name="geocoding">geocoding</string>
    <string name="prompt_gpsenable">Your gps is disabled! Would you like to enable it?</string>
    <string name="width_label">width</string>
    <string name="color_label">color</string>
    <string name="mainmenu_kmlexport">export</string>
    <string name="mainmenu_import">import</string>
    <string name="mainmenu_gpsdataselect">Gps data list</string>
    <string name="mainmenu_preferences">Settings</string>
    <string name="mainmenu_merge">merge selected logs</string>
    <string name="gpslogproperty">Properties for: </string>
    <string name="gpslog_chart">Chart</string>
    <string name="gpslog_zoom">zoom to</string>
    <string name="gpslog_delete">Delete</string>
    <string name="mapproperty">Properties for: </string>
    <string name="map_zoom">Zoom to the map</string>
    <string name="map_delete">Delete the map</string>
    <string name="gps_preferences">Gps preferences</string>
    <string name="gps_logging_distance">Min gps logging distance</string>
    <string name="gps_logging_interval">Min gps logging interval</string>
    <string name="gps_use_android_level">Use at android level (saves battery, needs restart)</string>
    <string name="gps_use_android_level_summary">If checked, the gps preferences are applied at operating system level, which can save battery, but might have a less stable signal when choosing large intervals (if you have gps connection problems on check devices, leave this unchecked). Note that the gps os powered continuously for send intervals less than 100 seconds. For better battery life choose larger intervals.</string>
    <string name="sms_preferences">Sms preferences</string>
    <string name="sms_catcher">Enable sms catcher</string>
    <string name="databaseError">An error occurred while connecting to the database</string>
    <string name="chart_profile_view">Profile View</string>
    <string name="gpx_import_processing">Importing gpx…</string>
    <string name="osm_additionalinfo">Add info to tag</string>
    <string name="osm_tagsgrid">Choose a tag to insert</string>
    <string name="text_show_position_on_map">map view</string>
    <string name="text_take_a_gps_note">take note</string>
    <string name="text_undo_a_gps_note">undo note</string>
    <string name="gps_log">gps log</string>
    <string name="gps_log_name">Insert a gps log name or accept the default one</string>
    <string name="audio_recording">Recording audio… push here to stop</string>
    <string name="audio_recording_stop">stop</string>
    <string name="panic">panic!</string>
    <string name="panic_number">Panic number</string>
    <string name="panic_number_notset">No valid panic number seems to be available. Did you set it in the preferences?</string>
    <string name="panic_upper">  PANIC!  </string>
    <string name="send_status_update">send position</string>
    <string name="help_needed">Help needed!</string>
    <string name="message_sent">Message sent</string>
    <string name="last_note_deleted">Deleted last note</string>
    <string name="last_note_not_deleted">Couldn\'t delete last note</string>
    <string name="text_logging">logging</string>
    <string name="text_gpson">gps on</string>
    <string name="debug">Debug preferences</string>
    <string name="enable_debug">Enable debug log</string>
    <string name="gpslogging_only">This function is available only when the gps is active and a signal is available.</string>
    <string name="remove_last_note_prompt">Do you really want to remove the last text note? This can\'t be undone.</string>
    <string name="installgpsstatus_title">Install GPS Status</string>
    <string name="installgpsstatus_message">Geopaparazzi uses the Gps Status Application as compass and gps info view. Do you want to install it?</string>
    <string name="reset">Create new project</string>
    <string name="load">Load existing project</string>
    <string name="phonenumber_hint">Enter comma separated phone numbers…</string>
    <string name="pick_phonenumber_label">…</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="delete_visible_notes_title">DELETE NOTES</string>
    <string name="delete_visible_notes_prompt">Do you really want to remove all visible notes? This can\'t be undone.</string>
    <string name="delete_visible_bookmarks_title">DELETE BOOKMARKS</string>
    <string name="delete_visible_bookmarks_prompt">Do you really want to remove all visible bookmarks? This can\'t be undone.</string>
    <string name="gps_searching_fix">Gps is trying to acquire fix.</string>
    <string name="bookmarks_list_rename">Rename the bookmark</string>
    <string name="mapsactivity_menu_toggle_scalebar">Toggle scalebar</string>
    <string name="mapsactivity_menu_tilesource">Select tile source</string>
    <string name="mapsactivity_delete_bookmarks">Deleting {0} bookmarks…</string>
    <string name="mapsactivity_delete_notes">Deleting {0} notes…</string>
    <string name="mapsactivity_new_bookmark">New bookmark</string>
    <string name="mapsactivity_enter_bookmark_name">Enter a name for the new bookmark (optional)</string>
    <string name="maptagsactivity_error_reading_tags">Error in reading tags</string>
    <string name="mapsactivity_menu_toggle_compass">Open compass</string>
    <string name="imagesvisibilityToggle">Toggle images visibility</string>
    <string name="imagefromgps">map center image</string>
    <string name="notefromgps">map center note</string>
    <string name="quicknotes">MAP CENTER NOTES</string>
    <string name="formnotes">FORM BASED NOTES</string>
    <string name="an_error_occurred_while_creating_the_chart_">An error occurred while creating the chart.</string>
    <string name="osm_preferences">OpenStreetMap Preferences</string>
    <string name="osm_do_it">Enable OSM tools</string>
    <string name="osm_user_label">Username</string>
    <string name="osm_password_label">Password</string>
    <string name="osm_server_label">Server to connect to</string>
    <string name="osm_notes_properly_uploaded">OSM notes properly uploaded.\n\nDo you want to remove the uploaded notes from the device?</string>
    <string name="an_error_occurred_while_uploading_osm_tags">An error occurred while uploading OSM tags: </string>
    <string name="enable_automatic_center_on_gps">Automatic center on GPS</string>
    <string name="enable_center_on_gps">Enable center on GPS</string>
    <string name="disable_center_on_gps">Disable center on GPS</string>
    <string name="profile">profile</string>
    <string name="loading_data">Loading data…</string>
    <string name="profilelable_distance">distance [m]</string>
    <string name="profilelable_elevation">elevation [m]</string>
    <string name="error_json_osm">The send json form is not valid. Please check your icons and form data.</string>
    <string name="available_only_with_network">This function is available only with an active network connection.</string>
    <string name="gps_use_coarse">Use network based position instead of gps (needs restart)</string>
    <string name="geopapcloud_preferences">Geopap-Cloud Preferences</string>
    <string name="geopapcloud_user_label">Username</string>
    <string name="geopapcloud_password_label">Password</string>
    <string name="geopapcloud_server_label">Server to connect to</string>
    <string name="map_textsize_factor">Map textsize factor</string>
    <string name="keep_screen_on">Keep the screen on</string>
    <string name="keep_screen_on_summary">Keeps the screen on when on dashboard and map view</string>
    <string name="use_custom_sdcard_summary">Use a custom sdcard path (useful in case of multiple storages). WARNING: USE AT OWN RISK</string>
    <string name="custom_sdcard_path">Custom sdcard path</string>
    <string name="size">Size</string>
    <string name="screen_preferences">Screen preferences</string>
    <string name="cross_properties_summary">Properties of the cross used to place notes.</string>
    <string name="cross_properties">Center Cross</string>
    <string name="color">Color</string>
    <string name="keep_use_imperial">Use imperial units</string>
    <string name="keep_use_imperial_sum">Uses imperial units instead of metric where possible.</string>
    <string name="high_density_display">High density display</string>
    <string name="high_density_display_sum">If on, online osm maptiles are scaled for better readability.</string>
    <string name="fred_preferences">FRED preferences</string>
    <string name="fred_external_db_path">External database path</string>
    <string name="fred_external_db_name">External database name</string>
    <string name="parent_table_info">Parent table info</string>
    <string name="fred_parent_table_present_summary">Is there a parent table that the table holding GPS data is related to? Check if yes.</string>
    <string name="child_table_info">Child table info</string>
    <string name="fred_first_level_table">Parent table name</string>
    <string name="fred_second_level_table">Child table name</string>
    <string name="fred_first_level_ID">ID column name</string>
    <string name="fred_second_level_ID">ID column name</string>
    <string name="fred_first_level_descriptor">Descriptor column name</string>
    <string name="fred_second_level_descriptor">Descriptor column name</string>
    <string name="fred_descriptor_summary">A location descriptor field, e.g. sitename, point number, etc.</string>
    <string name="fred_first_level_timestamp">Timestamp column name</string>
    <string name="fred_second_level_timestamp">Timestamp column name</string>
    <string name="fred_column_Lat">Latitude column name</string>
    <string name="fred_column_Lon">Longitude column name</string>
    <string name="fred_column_note">Notes column name</string>
    <string name="fred_tables_two_levels">Parent-Child table structure</string>
    <string name="fred_defval_external_db_path">/FRED/FRED.db</string>
    <string name="fred_defval_external_db_name">FRED</string>
    <string name="fred_defval_first_level_table">IPAQ_surveysite</string>
    <string name="fred_defval_first_level_ID">Site_ID</string>
    <string name="fred_defval_first_level_descriptor">Surveysite</string>
    <string name="fred_defval_first_level_timestamp">dtmRecCreate</string>
    <string name="fred_defval_second_level_table">IPAQ_Obspts</string>
    <string name="fred_defval_second_level_ID">Obspts_ID</string>
    <string name="fred_defval_column_Lat">latitude</string>
    <string name="fred_defval_column_Lon">longitude</string>
    <string name="fred_defval_column_note">Comments</string>
    <string name="fred_defval_two_levels">true</string>
    <string name="fred_defval_second_level_descriptor">Obspt</string>
    <string name="fred_defval_second_level_timestamp">dtmRecCreate</string>
</resources>