<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true" >

    <PreferenceScreen
        android:order="1"
        android:title="@string/gps_preferences" >
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="PREFS_KEY_GPS_LOGGING_DISTANCE"
            android:order="3"
            android:title="@string/gps_logging_distance" >
        </EditTextPreference>

        <ListPreference
            android:defaultValue="5"
            android:entries="@array/gps_time_name"
            android:entryValues="@array/gps_time_value"
            android:key="PREFS_KEY_GPS_LOGGING_INTERVAL"
            android:order="4"
            android:title="@string/gps_logging_interval" >
        </ListPreference>

        <CheckBoxPreference
            android:key="enable_automatic_center_on_gps"
            android:order="5"
            android:title="@string/enable_automatic_center_on_gps" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="PREFS_KEY_GPS_USE_NETWORK_POSITION"
            android:order="6"
            android:title="@string/gps_use_coarse" >
        </CheckBoxPreference>
    </PreferenceScreen>
    <PreferenceScreen
        android:order="7"
        android:title="@string/sms_preferences" >
        <CheckBoxPreference
            android:key="PREFS_KEY_SMSCATCHER"
            android:order="8"
            android:title="@string/sms_catcher" >
        </CheckBoxPreference>

        <EditTextPreference
            android:defaultValue=""
            android:key="panic_number"
            android:order="10"
            android:title="@string/panic_number" >
        </EditTextPreference>
    </PreferenceScreen>
    <PreferenceScreen
        android:order="30"
        android:title="@string/screen_preferences" >
        <PreferenceScreen
            android:order="60"
            android:summary="@string/cross_properties_summary"
            android:title="@string/cross_properties" >
            <ListPreference
                android:entries="@array/array_colornames"
                android:entryValues="@array/array_colornames"
                android:key="PREFS_KEY_CROSS_COLOR"
                android:order="61"
                android:title="@string/color" />
            <ListPreference
                android:entries="@array/decimation_factor"
                android:entryValues="@array/decimation_factor"
                android:key="PREFS_KEY_CROSS_WIDTH"
                android:order="62"
                android:title="@string/width" />
            <ListPreference
                android:entries="@array/cross_size"
                android:entryValues="@array/cross_size"
                android:key="PREFS_KEY_CROSS_SIZE"
                android:order="63"
                android:title="@string/size" />
        </PreferenceScreen>

        <EditTextPreference
            android:defaultValue="1.0"
            android:inputType="numberDecimal"
            android:key="mapsview_textsize_factor"
            android:order="80"
            android:title="@string/map_textsize_factor" />

        <CheckBoxPreference
            android:key="PREFS_KEY_SCREEN_ON"
            android:order="90"
            android:summary="@string/keep_screen_on_summary"
            android:title="@string/keep_screen_on" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="PREFS_KEY_IMPERIAL"
            android:order="91"
            android:summary="@string/keep_use_imperial_sum"
            android:title="@string/keep_use_imperial" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="PREFS_KEY_RETINA"
            android:order="92"
            android:summary="@string/high_density_display_sum"
            android:title="@string/high_density_display" >
        </CheckBoxPreference>
    </PreferenceScreen>

    <eu.hydrologis.geopaparazzi.preferences.CustomSdcardPathPreference
        android:defaultValue=""
        android:key="PREFS_KEY_CUSTOM_EXTERNALSTORAGE"
        android:order="100"
        android:summary="@string/use_custom_sdcard_summary"
        android:title="@string/custom_sdcard_path" />

    <PreferenceScreen
        android:order="200"
        android:title="@string/osm_preferences" >
        <CheckBoxPreference
            android:key="PREFS_KEY_DOOSM"
            android:order="201"
            android:title="@string/osm_do_it" >
        </CheckBoxPreference>

        <EditTextPreference
            android:key="osm_user_key"
            android:order="202"
            android:title="@string/osm_user_label" >
        </EditTextPreference>
        <EditTextPreference
            android:inputType="textPassword"
            android:key="osm_pwd_key"
            android:order="203"
            android:title="@string/osm_password_label" >
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="http://lucadelu.org/cgi-bin/zoo_loader.cgi"
            android:key="osm_server_key"
            android:order="204"
            android:title="@string/osm_server_label" >
        </EditTextPreference>
    </PreferenceScreen>
    <PreferenceScreen
        android:order="210"
        android:title="@string/geopapcloud_preferences" >
        <EditTextPreference
            android:key="geopapcloud_user_key"
            android:order="212"
            android:title="@string/geopapcloud_user_label" >
        </EditTextPreference>
        <EditTextPreference
            android:inputType="textPassword"
            android:key="geopapcloud_pwd_key"
            android:order="213"
            android:title="@string/geopapcloud_password_label" >
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue=""
            android:key="geopapcloud_server_key"
            android:order="214"
            android:title="@string/geopapcloud_server_label" >
        </EditTextPreference>
    </PreferenceScreen>
    <PreferenceScreen 
        android:title="@string/fred_preferences" 
        android:order="300">
        <EditTextPreference 
            android:key="EXTERNAL_DB" 
            android:title="@string/fred_external_db_path"
            android:defaultValue="@string/fred_defval_external_db_path" 
            android:order="301">
        </EditTextPreference> 
        <EditTextPreference 
            android:key="EXTERNAL_DB_NAME" 
            android:title="@string/fred_external_db_name"
            android:defaultValue="@string/fred_defval_external_db_name" 
            android:order="302">
        </EditTextPreference> 
        <PreferenceScreen
	       	android:title="@string/child_table_info" 
	        android:order="320">   
	        <EditTextPreference 
	            android:key="SECOND_LEVEL_TABLE" 
	            android:title="@string/fred_second_level_table" 
	            android:defaultValue="@string/fred_defval_second_level_table"
	            android:order="321">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_SECOND_LEVEL_ID" 
	            android:title="@string/fred_second_level_ID" 
	            android:defaultValue="@string/fred_defval_second_level_ID"
	            android:order="322">          
	        </EditTextPreference>
	       	<EditTextPreference 
	            android:key="COLUMN_SECOND_LEVEL_DESCRIPTOR" 
	            android:title="@string/fred_second_level_descriptor" 
	            android:defaultValue="@string/fred_defval_second_level_descriptor"
	            android:order="323"
	          	android:summary="@string/fred_descriptor_summary">
	        </EditTextPreference>
	       	<EditTextPreference 
	            android:key="COLUMN_LAT" 
	            android:title="@string/fred_column_Lat" 
	            android:defaultValue="@string/fred_defval_column_Lat"
	            android:order="324">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_LON" 
	            android:title="@string/fred_column_Lon" 
	            android:defaultValue="@string/fred_defval_column_Lon"
	            android:order="325">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_NOTE" 
	            android:title="@string/fred_column_note" 
	            android:defaultValue="@string/fred_defval_column_note"
	            android:order="326">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_SECOND_LEVEL_TIMESTAMP" 
	            android:title="@string/fred_second_level_timestamp" 
	            android:defaultValue="@string/fred_defval_second_level_timestamp"
	            android:order="327">
	        </EditTextPreference>
	    </PreferenceScreen>
        <CheckBoxPreference 
            android:key="TABLES_TWO_LEVELS" 
            android:defaultValue="@string/fred_defval_two_levels" 
            android:title="@string/fred_tables_two_levels"
            android:order="330"
            android:summary="@string/fred_parent_table_present_summary">
        </CheckBoxPreference>     
        <PreferenceScreen 
	        android:title="@string/parent_table_info" 
	        android:order="340">
	        <EditTextPreference 
	            android:key="FIRST_LEVEL_TABLE" 
	            android:title="@string/fred_first_level_table" 
	            android:defaultValue="@string/fred_defval_first_level_table"
	            android:order="341">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_FIRST_LEVEL_ID" 
	            android:title="@string/fred_first_level_ID" 
	            android:defaultValue="@string/fred_defval_first_level_ID"
	            android:order="342">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_FIRST_LEVEL_DESCRIPTOR" 
	            android:title="@string/fred_first_level_descriptor" 
	            android:defaultValue="@string/fred_defval_first_level_descriptor"
	            android:order="343"
	            android:summary="@string/fred_descriptor_summary">
       	 	</EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_FIRST_LEVEL_TIMESTAMP" 
	            android:title="@string/fred_first_level_timestamp" 
	            android:defaultValue="@string/fred_defval_first_level_timestamp"
	            android:order="344">
        	</EditTextPreference>
	    </PreferenceScreen>
	    
    </PreferenceScreen>
</PreferenceScreen>